--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>DreamTalk</title>
 </head>
 <body>
-<h3>Test</h3>
-<div>View</div>
+<div id="app"></div>
+<script src="static/bundle.js"></script>
 </body>
 </html>
