--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>DreamTalk</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="shortcut icon" type="image/png" href="assets/logo.jpg">
 </head>
 <body>
 <div id="app"></div>
